overflow-x prevented

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ body {
     /* min-width:1000px;   */
     overflow-x: hidden;
 }
+.wrapper {
+    overflow-x: hidden;
+}
 .top {
     width: 100vw;
     height: 10px;
